--- a/src/index.css
+++ b/src/index.css
@@ -12,4 +12,6 @@ body,
   width: 100%;
   height: 100%;
   overflow: hidden;
+  background: #f0f0f0;
+  color-scheme: light;
 }
